Add some elements within the body of the about page

--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
 
         <!-- quote -->
         <div class="bg-light p-5">
-
+            <h2 class="mision text-center display-5">Misión</h2>
             <blockquote class="blockquote fs-2 pt-5">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error tempore consequatur nisi natus at
-                    ducimus cum, ratione nostrum voluptatem illo perspiciatis? Earum quaerat provident deleniti
-                    blanditiis ea, dolorem eius tempora!</p>
+              
+                <p>Nuestra misión es ofrecerle a nuestros clientes el mejor servicio de comida italiana,
+                     que puedan disfrutarla en tiempo record sin perder el delicioso sabor que la 
+                     caracteriza</p>
             </blockquote>
 
         </div>
