Add some more elements to about page

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               
                 <p>Nuestra misión es ofrecerle a nuestros clientes el mejor servicio de comida italiana,
                      que puedan disfrutarla en tiempo record sin perder el delicioso sabor que la 
-                     caracteriza</p>
+                     caracteriza.</p>
             </blockquote>
 
         </div>
