--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
             <div class="row flex-lg-row-reverse align-items-center g-5">
 
                 <div class="col-lg-7">
-                    <img src="./Images/Pizza.jpg" class="d-block mx-lg-auto img-fluid" width=700 alt="Catrobat">
+                    <img src="./Images/Pizza.jpg" class="d-block mx-lg-auto img-fluid" width=700 alt="Pizza">
                 </div>
 
                 <div class="col-lg-5">
                     <h1 class="display-5 fw-bold">Come cuando quieras</h1>
                     <p class="lead">¿Cansado de tener que esperar por tu comida? ¡Registrate ya y evita la larga espera!
                     </p>
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                    <div class="justify-content-md-start">
                         <button type="button" class="btn btn-primary btn-lg px-5 me-md-2">Registrarse</button>
                     </div>
                 </div>
@@ -82,7 +82,6 @@
         <div class="bg-light p-5">
             <h2 class="mision text-center display-5">Misión</h2>
             <blockquote class="blockquote fs-2 pt-5">
-              
                 <p>Nuestra misión es ofrecerle a nuestros clientes el mejor servicio de comida italiana,
                      que puedan disfrutarla en tiempo record sin perder el delicioso sabor que la 
                      caracteriza.</p>
