--- a/pages/about.html
+++ b/pages/about.html
@@ -39,12 +39,12 @@
                     </div>
                 </div>
 
-                <div class="pt-5 px-4 col-lg-3">
+                <div class="images pt-5 px-4 col-lg-3">
                     <img src="../Images/vision.jpg" class="rounded-3 img-fluid" alt="Visión del negocio">
                 </div>
 
             </div>
-            <div class="container2 p-5">
+            <div class="container2-reverse p-5">
 
                 <div class="pt-5 px-4 col-lg-3">
                     <img src="../Images/Mision.jpg" class="rounded-3 img-fluid" alt="Misión del negocio">
@@ -62,13 +62,13 @@
             </div>
         </section>
         <section>
-            <div class="container">
+            <div class="container2">
 
                 <div class="ubication">
                     <h2 class="mision text-center display-5">¿Donde encontrarnos?</h2>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3735.412835659057!2d-103.30883917013185!3d20.5711916647337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842f4cd4108c7c2b%3A0x1afcadf4fab00999!2sP.%C2%BA%20de%20los%20Sauces%2C%20Minerales%2C%20Ermita%2C%2045693%20Las%20Pintitas%2C%20Jal.!5e0!3m2!1ses!2smx!4v1663258089169!5m2!1ses!2smx"
-                        width="450" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+                        style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
