Create a register and login

--- a/pages/about.html
+++ b/pages/about.html
@@ -20,7 +20,7 @@
                 <li><a href="../index.html" class="nav-link link-secondary">Inicio</a></li>
                 <li><a class="nav-link link-secondary" href="#">Acerca de</a></li>
                 <li><a class="nav-link link-secondary" href="#photos">Platillos</a></li>
-                <li><a class="nav-link link-secondary" href="#sign-up">Registrarse</a></li>
+                <li><a class="nav-link link-secondary" href="../pages/register.html">Registrarse</a></li>
             </ul>
         </div>
     </nav>
