--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#" class="nav-link link-secondary">Inicio</a></li>
                 <li><a class="nav-link link-secondary" href="pages/about.html">Acerca de</a></li>
                 <li><a class="nav-link link-secondary" href="#photos">Platillos</a></li>
-                <li><a class="nav-link link-secondary" href="#sign-up">Registrarse</a></li>
+                <li><a class="nav-link link-secondary" href="pages/register.html">Registrarse</a></li>
             </ul>
         </div>
     </nav>
