Add some styles to Login and register

--- a/pages/about.html
+++ b/pages/about.html
@@ -18,9 +18,8 @@
                     src="../Images/pizza-icon.png"> </a>
             <ul class="nav justify-content-end">
                 <li><a href="../index.html" class="nav-link link-secondary">Inicio</a></li>
-                <li><a class="nav-link link-secondary" href="#">Acerca de</a></li>
-                <li><a class="nav-link link-secondary" href="#photos">Platillos</a></li>
-                <li><a class="nav-link link-secondary" href="../pages/register.html">Registrarse</a></li>
+                <li><a class="nav-link link-secondary" href="../pages/register.html">Registarse</a></li>
+                <li><a class="nav-link link-secondary" href="../pages/login.html">Login</a></li>
             </ul>
         </div>
     </nav>
