--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     src="./Images/pizza-icon.png"> </a>
             <ul class="nav justify-content-end">
                 <li><a href="#" class="nav-link link-secondary">Inicio</a></li>
-                <li><a class="nav-link link-secondary" href="pages/about.html">Acerca de</a></li>
-                <li><a class="nav-link link-secondary" href="#photos">Platillos</a></li>
                 <li><a class="nav-link link-secondary" href="pages/register.html">Registrarse</a></li>
+                <li><a class="nav-link link-secondary" href="pages/login.html">Login</a></li>
+                <li><a class="nav-link link-secondary" href="pages/about.html">Acerca de</a></li>
             </ul>
         </div>
     </nav>
@@ -42,7 +42,7 @@
                     <p class="lead">¿Cansado de tener que esperar por tu comida? ¡Registrate ya y evita la larga espera!
                     </p>
                     <div class="justify-content-md-start">
-                        <button type="button" class="btn btn-primary btn-lg px-5 me-md-2">Registrarse</button>
+            <a href="./pages/register.html"><button type="button" class="btn btn-primary btn-lg px-5 me-md-2">Registrarse</button></a>
                     </div>
                 </div>
 
@@ -99,7 +99,7 @@
                         <p class="fs-4">¡Registrate para comenzar a disfrutar nuestros platillos!</p>
                     </div>
                     <div class="col-md-4 align-self-center d-flex justify-content-center">
-                        <button class="btn btn-outline-light btn-lg px-5" type="button">Sign Up</button>
+                        <a href="./pages/register.html"><button class="btn btn-outline-light btn-lg px-5" type="button">Sign Up</button></a>
                     </div>
                 </div>
             </div>
