--- a/pages/register.html
+++ b/pages/register.html
@@ -15,15 +15,15 @@
                 <a class="nav-link link-secondary p-0" href="../index.html">IFood<img width="15" height="15"
                         src="../Images/pizza-icon.png"> </a>
                 <ul class="nav justify-content-end">
-                    <li><a class="nav-link link-secondary" href="../pages/about.html">Acerca de</a></li>
-                    <li><a class="nav-link link-secondary" href="#photos">Platillos</a></li>
+                    <li><a class="nav-link link-secondary" href="../index.html">Inicio</a></li>
                     <li><a class="nav-link link-secondary" href="../pages/login.html">Login</a></li>
+                    <li><a class="nav-link link-secondary" href="../pages/about.html">Acerca de</a></li>
                 </ul>
             </div>
         </nav>
     </header>
     <main>
-        <form class="container2" action="../php/register.php" method="post">
+        <form class="container2 center-register" action="../php/register.php" method="post">
             <h2 class="title">Registro</h2>
             <p class="element">
                 <input type="text" name="nombre" placeholder="Nombre">
@@ -41,7 +41,7 @@
             <a href="login.html" class="already-registered">¿Ya tienes cuenta? Inicia sesión</a>
         </form>
     </main>
-    <footer class="bg-dark py-3">
+    <footer class="bg-dark py-3 align-bottom">
         <p class="text-center text-muted py-3 m-0 fs-4">&copy; 2022 IFood</p>
     </footer>
   
