Create recipes table

--- a/pages/register.html
+++ b/pages/register.html
@@ -12,11 +12,11 @@
     <header>
         <nav class="navbar bg-dark sticky-top">
             <div class="container">
-                <a class="nav-link link-secondary p-0" href="../index.html">IFood<img width="15" height="15"
+                <a class="nav-link link-secondary p-0" href="../index.php">IFood<img width="15" height="15"
                         src="../Images/pizza-icon.png"> </a>
                 <ul class="nav justify-content-end">
-                    <li><a class="nav-link link-secondary" href="../index.html">Inicio</a></li>
-                    <li><a class="nav-link link-secondary" href="../pages/login.html">Login</a></li>
+                    <li><a class="nav-link link-secondary" href="../index.php">Inicio</a></li>
+                    <li><a class="nav-link link-secondary" href="../pages/login.php">Login</a></li>
                     <li><a class="nav-link link-secondary" href="../pages/about.html">Acerca de</a></li>
                 </ul>
             </div>
@@ -38,7 +38,7 @@
                 <input type="password" name="rep_pass" placeholder="Repetir Contraseña">
             </p>
             <button type="submit">Registrarse</button>
-            <a href="login.html" class="already-registered">¿Ya tienes cuenta? Inicia sesión</a>
+            <a href="login.php" class="already-registered">¿Ya tienes cuenta? Inicia sesión</a>
         </form>
     </main>
     <footer class="bg-dark py-3 align-bottom">
