--- a/pages/about.html
+++ b/pages/about.html
@@ -14,12 +14,12 @@
 
     <nav class="navbar bg-dark sticky-top">
         <div class="container">
-            <a class="nav-link link-secondary p-0" href="../index.html">IFood<img width="15" height="15"
+            <a class="nav-link link-secondary p-0" href="../index.php">IFood<img width="15" height="15"
                     src="../Images/pizza-icon.png"> </a>
             <ul class="nav justify-content-end">
-                <li><a href="../index.html" class="nav-link link-secondary">Inicio</a></li>
+                <li><a href="../index.php" class="nav-link link-secondary">Inicio</a></li>
                 <li><a class="nav-link link-secondary" href="../pages/register.html">Registarse</a></li>
-                <li><a class="nav-link link-secondary" href="../pages/login.html">Login</a></li>
+                <li><a class="nav-link link-secondary" href="../pages/login.php">Login</a></li>
             </ul>
         </div>
     </nav>
